spade-tests/src/snapshots/spade_tests__hir_lowering__tests__reg_binding_inout_produes_error.snap
---
source: spade-tests/src/hir_lowering.rs
---
extern entity consumer(#[no_mangle] t: inout<int<8>>);

entity test(clk: clock, #[no_mangle] t: inout<int<8>>) {
    reg(clk) t_ = t;
    inst consumer(t_)
}

error: Trait bound not satisfied. inout<int<8>> does not implement core::Data
  ┌─ testinput:4:14
  │
4 │     reg(clk) t_ = t;
  │              ^^   -
  │              │    │
  │              │    Required because of the trait bound specified here
  │              │    The type of this expression is not Data which means it cannot be stored in a register.
  │              inout<int<8>> does not implement core::Data
  │
  = help: An expression not being Data typically means it contains at least one `inv` type
  = help: You can learn more about `Data` here: https://docs.spade-lang.org/wires.html
